--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ height: 150px;
 
 .container {
   width: 80%;
-  margin: 0 auto;
+  margin: 30px auto;
   background-color: var(--primary);
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
